# starter-aws-snowflake-ds

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  example.env  pyproject.toml  requirements.txt
.github/workflows/: build-dev-images.yml  build-ecr-images.yml  build-prd-images.yml  dev-ecr-images.yml  prd-ecr-images.yml
notebooks/examples/: read_snowflake_example.ipynb  sample_nb.ipynb
scripts/: _utils.sh  format.sh  install.sh  release.sh  upgrade.sh  validate.sh
workflows/: buckets.py
workflows/crypto/: prices.py  prices_aws.py  prices_pg.py  readme.md
workflows/dags/: distributed_dag.py  simple_dag.py
workflows/dau/: dau_aws.py  dau_pg.py
workflows/notebooks_daily/: notebooks_daily.py
workspace/: CHANGELOG.md  config.py  settings.py
workspace/dev/: airflow.py  aws_config.py  aws_resources.py  docker_config.py  jupyter.py  pg_dbs.py  superset.py  traefik.py
workspace/dev/airflow/: docker_resources.py
workspace/dev/airflow/resources/: webserver_config.py
workspace/dev/airflow_resources/: requirements-airflow.txt  webserver_config.py
workspace/dev/images/: __init__.py  airflow.Dockerfile  build_airflow_image.sh  build_jupyter_image.sh  build_superset_image.sh  jupyter.Dockerfile  superset.Dockerfile
workspace/dev/jupyter/: docker_resources.py
workspace/dev/jupyter_resources/: requirements-jupyter.txt
workspace/dev/superset/: docker_resources.py
workspace/dev/superset/resources/: requirements-superset.txt
workspace/dev/superset/resources/pythonpath_dev/: superset_config.py
workspace/dev/superset_resources/: requirements-superset.txt
workspace/dev/superset_resources/pythonpath_dev/: .gitignore  superset_config.py
workspace/example_secrets/: dev_airflow_secrets.yml  dev_databox_secrets.yml  dev_jupyter_secrets.yml  dev_superset_secrets.yml  prd_airflow_db_secrets.yml  prd_airflow_secrets.yml  prd_superset_db_secrets.yml  prd_superset_secrets.yml
workspace/k8s/: whoami.py
workspace/prd/: airflow.py  aws_config.py  aws_resources.py  docker_config.py  jupyter.py  k8s_config.py  pg_dbs.py  superset.py  traefik.py
workspace/prd/airflow/: aws_resources.py  k8s_apps.py
workspace/prd/airflow/resources/: requirements-airflow.txt  webserver_config.py
workspace/prd/airflow_resources/: requirements-airflow.txt  webserver_config.py
workspace/prd/images/: __init__.py  airflow.Dockerfile  build_airflow_image.sh  build_jupyter_image.sh  build_superset_image.sh  jupyter.Dockerfile  superset.Dockerfile
workspace/prd/jupyter/: jupyterlab_user1.py  jupyterlab_user2.py  jupyterlab_user3.py
workspace/prd/jupyter_resources/: requirements-jupyter.txt
workspace/prd/superset/: aws_resources.py  k8s_apps.py
workspace/prd/superset/resources/pythonpath_dev/: superset_config.py
workspace/prd/superset_resources/pythonpath_dev/: superset_config.py
